--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,74 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.gmail.edziu1996</groupId>
-  <artifactId>ExtraPermissions</artifactId>
-  <version>0.6.2</version>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.gmail.edziu1996</groupId>
+	<artifactId>ExtraPermissions</artifactId>
+	<version>0.7.0</version>
   
-  <name>ExtraPermissions</name>
+	<name>ExtraPermissions</name>
   
-  <licenses>
-  <license>
-    <name>The Apache License, Version 2.0</name>
-    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-  </license>
-  </licenses>
+	<licenses>
+		<license>
+    		<name>The Apache License, Version 2.0</name>
+    		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
   
-  <developers>
-    <developer>
-      <name>Edziu1996</name>
-      <email>edziu1996@gmail.com</email>
-    </developer>
-  </developers>
+	<developers>
+    	<developer>
+      		<name>Edziu1996</name>
+      		<email>edziu1996@gmail.com</email>
+    	</developer>
+	</developers>
   
-  <scm>
-  <connection>scm:git:git@github.com:Edziu1996/ExtraPermissions.git</connection>
-  <developerConnection>scm:git:git@github.com:juven/ExtraPermissions.git</developerConnection>
-  <url>git@github.com:Edziu1996/ExtraPermissions.git</url>
-  </scm>
+	<scm>
+	<connection>scm:git:git@github.com:Edziu1996/ExtraPermissions.git</connection>
+	<developerConnection>scm:git:git@github.com:juven/ExtraPermissions.git</developerConnection>
+	<url>git@github.com:Edziu1996/ExtraPermissions.git</url>
+	</scm>
   
-  <repositories>
-    <repository>
-        <id>sponge-maven-repo</id>
-        <name>Sponge maven repo</name>
-        <url>http://repo.spongepowered.org/maven</url>
-        <releases>
-            <enabled>true</enabled>
-        </releases>
-        <snapshots>
-            <enabled>true</enabled>
-        </snapshots>
-    </repository>
-  </repositories>
+	<repositories>
+    	<repository>
+        	<id>sponge-maven-repo</id>
+        	<name>Sponge maven repo</name>
+        	<url>http://repo.spongepowered.org/maven</url>
+        	<releases>
+        		<enabled>true</enabled>
+        	</releases>
+        	<snapshots>
+            	<enabled>true</enabled>
+        	</snapshots>
+    	</repository>
+	</repositories>
 
-  <dependencies>
-    <dependency>
-        <groupId>org.spongepowered</groupId>
-        <artifactId>spongeapi</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-    	<groupId>com.gmail.edziu1996</groupId>
-    	<artifactId>NameAPI</artifactId>
-    	<version>0.3.1</version>
-    </dependency>
-  </dependencies>
-
+	<dependencies>
+    	<dependency>
+        	<groupId>org.spongepowered</groupId>
+        	<artifactId>spongeapi</artifactId>
+        	<version>4.2.0-SNAPSHOT</version>
+        	<scope>provided</scope>
+    	</dependency>
+		<dependency>
+    		<groupId>com.gmail.edziu1996</groupId>
+    		<artifactId>NameAPI</artifactId>
+    		<version>0.3.2</version>
+		</dependency>
+	</dependencies>
+	
+	
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+				
+			</plugins>
+		</pluginManagement>
+		
+	</build>
 </project>
